--- a/contact/index.html
+++ b/contact/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>e. wong life</title>
+    <title>e. wong contact</title>
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="../css/bootstrap.min.css">
@@ -53,11 +53,11 @@
                     <li>
                         <a href="../macro">MACRO</a>
                     </li>
-                    <li class="active">
-                        <a href=".">LIFE</a>
-                    </li>
                     <li>
-                        <a href="../contact">CONTACT</a>
+                        <a href="../life">LIFE</a>
+                    </li>
+                    <li class="active">
+                        <a href=".">CONTACT</a>
                     </li>
                 </ul>
             </div>
@@ -84,13 +84,13 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="../js/bootstrap.min.js"></script>
 <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+                (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-73641920-1', 'auto');
-  ga('send', 'pageview');
+    ga('create', 'UA-73641920-1', 'auto');
+    ga('send', 'pageview');
 
 </script>
 </body>
