--- a/index.html
+++ b/index.html
@@ -27,40 +27,54 @@
 </head>
 <body>
 <div class="container">
-<div class="brand"><a href="." style="text-decoration:none;">E R I C W O N G</a></div>
+    <div class="brand"><a href=".">E R I C W O N G</a></div>
 
 <!-- Navigation -->
 <nav class="navbar navbar-default" role="navigation">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <!-- navbar-brand is hidden on larger screens, but visible when the menu is collapsed -->
-            <a class="navbar-brand" href=".">E R I C W O N G</a>
-        </div>
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav">
-                <li>
-                    <a href="land">LAND</a>
-                </li>
-                <li>
-                    <a href="macro">MACRO</a>
-                </li>
-                <li>
-                    <a href="life">LIFE</a>
-                </li>
-            </ul>
-        </div>
-        <!-- /.navbar-collapse -->
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+        </button>
+        <!-- navbar-brand is hidden on larger screens, but visible when the menu is collapsed -->
+        <a class="navbar-brand" href=".">E R I C W O N G</a>
+    </div>
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav">
+            <li>
+                <a href="land">LAND</a>
+            </li>
+            <li>
+                <a href="macro">MACRO</a>
+            </li>
+            <li>
+                <a href="life">LIFE</a>
+            </li>
+            <li>
+                <a href="contact">CONTACT</a>
+            </li>
+        </ul>
+    </div>
+    <!-- /.navbar-collapse -->
     <!-- /.container -->
 </nav>
 
 <div id="gallery" class="row" style="padding: 15px">
+    <div class="frontpage-crop">
+        <div class="hovereffect">
+            <img class="frontpage"  src="images/IMG0994.png">
+            <a href="land">
+                <div class="overlay">
+                    <h2>Land</h2>
+                </div>
+            </a>
+        </div>
+    </div>
     <div class="frontpage-crop">
         <div class="hovereffect">
             <img class="frontpage"  src="images/IMG1746_v.png">
@@ -83,28 +97,20 @@
     </div>
     <div class="frontpage-crop">
         <div class="hovereffect">
-            <img class="frontpage" src="images/IMG0237.png">
-            <!--<a href=".">-->
+            <div id="instafeed" style="max-height: 500px"></div>
+            <!--<img class="frontpage" src="images/IMG0237.png">-->
+            <a href="Contact">
                 <div class="overlay">
-                    <h2></h2>
-                </div>
-            <!--</a>-->
-            </div>
-    </div>
-    <div class="frontpage-crop">
-        <div class="hovereffect">
-            <img class="frontpage"  src="images/IMG0994.png">
-            <a href="land">
-                <div class="overlay">
-                    <h2>Land</h2>
+                    <h2>Contact</h2>
                 </div>
             </a>
-        </div>
+            </div>
     </div>
 </div>
 
 <footer>
     <div class="col-lg-12 text-center" style="bottom: 0">
+        <!--<a href="land" class="copyright" style="text-decoration:none; padding-top: 20px">Contact</a>-->
         <p class="copyright">Copyright &copy; eric wong 2016</p>
     </div>
 </footer>
@@ -112,7 +118,18 @@
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
+<script src="js/gallery.js"></script>
+<script src="plugins/instafeed/instafeed.js"></script>
 <script>
+    var feed = new Instafeed({
+        get: 'user',
+        userId: '2948802822',
+        clientId: '86a64b6f747741efa9044421d55fafd1',
+        accessToken: '2948802822.86a64b6.59c362a80d4f437883321bfb6e5a4658',
+        resolution: 'standard_resolution',
+        template: '<a href="{{link}}"><img src="{{image}}" style="max-height: 500px;"/></a>'
+    });
+    feed.run();
 </script>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
