--- a/land/index.html
+++ b/land/index.html
@@ -39,6 +39,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
                 </button>
                 <!-- navbar-brand is hidden on larger screens, but visible when the menu is collapsed -->
                 <a class="navbar-brand" href="..">E R I C W O N G</a>
@@ -54,6 +55,9 @@
                     </li>
                     <li>
                         <a href="../life">LIFE</a>
+                    </li>
+                    <li>
+                        <a href="../contact">CONTACT</a>
                     </li>
                 </ul>
             </div>
