--- a/test.html
+++ b/test.html
@@ -5,7 +5,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!--<script src="http://code.jquery.com/jquery-1.9.0.js"></script>-->
     <!--<script src="http://code.jquery.com/jquery-migrate-1.3.0.js"></script>-->
-    <script type="text/javascript" src="js/jquery.address-1.5.js?strict=0"></script>
+    <script type="text/javascript" src="plugins/jquery.address/jquery.address-1.5.js?strict=0"></script>
     <script type="text/javascript">
         // Simple log
         var log = function(msg)
