--- a/contact/index.html
+++ b/contact/index.html
@@ -69,6 +69,7 @@
     <div class="container">
         <div class="gallery">
             <p class="copyright">Coming Soon!</p>
+            <div id="instafeed" style="height: 500px"></div>
         </div>
     </div>
     <!-- /.container -->
@@ -83,6 +84,18 @@
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="../js/bootstrap.min.js"></script>
+<script src="../vendor/instafeed/instafeed.js"></script>
+<script>
+    var feed = new Instafeed({
+        get: 'user',
+        userId: '2948802822',
+        clientId: '86a64b6f747741efa9044421d55fafd1',
+        accessToken: '2948802822.86a64b6.59c362a80d4f437883321bfb6e5a4658',
+        resolution: 'standard_resolution',
+        template: '<img src="{{image}}" class="frontpage" style="height: 100%; width: auto;"/></a>'
+    });
+    feed.run();
+</script>
 <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
                 (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
