--- a/land/index.html
+++ b/land/index.html
@@ -20,10 +20,9 @@
     <![endif]-->
 
     <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="../css/angular.css">
     <link rel="stylesheet" href="../css/business-casual.css">
-    <link rel="stylesheet" href="../plugins/jquery.justifiedgallery/justifiedGallery.min.css">
-    <link rel="stylesheet" href="../plugins/colorbox/colorbox.css">
-    <link rel="stylesheet" href="../plugins/prettyPhoto/prettyphoto.css">
+    <link rel="stylesheet" href="../vendor/jquery.justifiedGallery/justifiedGallery.min.css">
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Josefin+Sans:100,400,700' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Quicksand:400,300,700' rel='stylesheet' type='text/css'>
@@ -91,6 +90,18 @@
         <a href="img/IMG0622.png" rel="lightbox[gallery]">
             <img src="img/IMG0622.png">
         </a>
+        <a href="img/IMG0622.png" rel="lightbox[gallery]">
+            <img src="img/IMG0622.png">
+        </a>
+        <a href="img/IMG4362.png"  rel="lightbox[gallery]">
+            <img src="img/IMG4362.png">
+        </a>
+        <a href="img/IMG2027.png" rel="lightbox[gallery]">
+            <img src="img/IMG2027.png">
+        </a>
+        <a href="img/IMG0622.png" rel="lightbox[gallery]">
+            <img src="img/IMG0622.png">
+        </a>
     </div>
     <!-- /.gallery -->
     <footer>
@@ -101,9 +112,9 @@
 </div>
 <!-- /.container -->
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 <script src="../js/bootstrap.min.js"></script>
-<script src="../plugins/jquery.justifiedgallery/jquery.justifiedGallery.min.js"></script>
+<script src="../vendor/jquery.justifiedGallery/jquery.justifiedGallery.min.js"></script>
 <script>
     $(document).ready(function (){
         $("#gallery").justifiedGallery({
