--- a/macro/index.html
+++ b/macro/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="gallery">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -20,16 +20,15 @@
     <![endif]-->
 
     <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="../css/angular.css">
     <link rel="stylesheet" href="../css/business-casual.css">
-    <link rel="stylesheet" href="../plugins/jquery.justifiedgallery/justifiedGallery.min.css">
-    <link rel="stylesheet" href="../plugins/colorbox/colorbox.css">
-    <link rel="stylesheet" href="../plugins/prettyPhoto/prettyphoto.css">
+    <link rel="stylesheet" href="../vendor/jquery.justifiedGallery/justifiedGallery.min.css">
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Josefin+Sans:100,400,700' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Quicksand:400,300,700' rel='stylesheet' type='text/css'>
 </head>
 <body>
-<div class="container">
+<div class="container" ng-controller="galleryController">
     <div class="brand"><a href=".." style="text-decoration:none;">E R I C W O N G</a></div>
 
     <!-- Navigation -->
@@ -70,26 +69,7 @@
     </nav>
 
     <!-- Gallery -->
-    <div id="gallery">
-        <a href="img/IMG1746.png" rel="lightbox[gallery]">
-            <img src="img/IMG1746.png">
-        </a>
-        <a href="img/IMG3403.png"  rel="lightbox[gallery]">
-            <img src="img/IMG3403.png">
-        </a>
-        <a href="img/IMG2023.png" rel="lightbox[gallery]">
-            <img src="img/IMG2023.png">
-        </a>
-        <a href="img/IMG5645.png"  rel="lightbox[gallery]">
-            <img src="img/IMG5645.png">
-        </a>
-        <a href="img/IMG6385.png" rel="lightbox[gallery]">
-            <img src="img/IMG6385.png">
-        </a>
-        <a href="img/IMG2696.png" rel="lightbox[gallery]">
-            <img src="img/IMG2696.png">
-        </a>
-    </div>
+    <justified-gallery gallery="macro"></justified-gallery>
     <!-- /.gallery -->
     <footer>
             <div class="col-lg-12 text-center">
@@ -99,21 +79,12 @@
 </div>
 <!-- /.container -->
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular.min.js"></script>
+<script src="../vendor/jquery.justifiedGallery/jquery.justifiedGallery.min.js"></script>
 <script src="../js/bootstrap.min.js"></script>
-<script src="../plugins/jquery.justifiedgallery/jquery.justifiedGallery.min.js"></script>
-<script src="../plugins/prettyPhoto/prettyphoto.js"></script>
+<script src="../gallery.js"></script>
 <script>
-    $(document).ready(function (){
-        $("#gallery").justifiedGallery({
-            rowHeight: 225,
-//            maxRowHeight: "100%",
-            margins: 10,
-            randomize: false
-        });
-
-        $("[rel^='lightbox']").prettyPhoto();
-    })
 </script>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
